language/move-lang/tests/move_check/borrows/freeze_combo_invalid.exp
error: 

    ┌── tests/move_check/borrows/freeze_combo_invalid.move:13:9 ───
    │
 13 │         freeze(s);
    │         ^^^^^^^^^ Invalid freeze.
    ·
 12 │         if (cond) f = &mut s.f else f = &mut other.f;
    │                       -------- Field 'f' is still being mutably borrowed by this reference
    │

error: 

    ┌── tests/move_check/borrows/freeze_combo_invalid.move:20:9 ───
    │
 20 │         freeze(s);
    │         ^^^^^^^^^ Invalid freeze.
    ·
 19 │         if (cond) f = &mut s.f else f = &mut s.g;
    │                       -------- Field 'f' is still being mutably borrowed by this reference
    ·
 19 │         if (cond) f = &mut s.f else f = &mut s.g;
    │                                         -------- Field 'g' is still being mutably borrowed by this reference
    │

error: 

    ┌── tests/move_check/borrows/freeze_combo_invalid.move:27:9 ───
    │
 27 │         freeze(s);
    │         ^^^^^^^^^ Invalid freeze.
    ·
 26 │         if (cond) x = s else x = other;
    │                       - It is still being mutably borrowed by this reference
    │

